- [Bugfix] New connections do not authenticate (Dropbox) (#9932)
- [Bugfix] Large file uploads do not resume (Backblaze B2) (#9935)
- [Bugfix] Failure listing folders with whitespace (OneDrive) (#9937)
- [Bugfix] Failure duplicating files (FTP) (#9933)
- [Bugfix] Failure uploading files with temporary filename option enabled (Backblaze B2)
- [Bugfix] Failure connecting to local disk (Windows)

6.0 [https://trac.cyberduck.io/milestone/6.0]
- [Feature] Create encrypted vault interopable with Cryptomator (#7937)
- [Feature] Encrypt uploads into vault (Cyptomator)
- [Feature] Decrypt downloads from vault (Cyptomator)
- [Feature] Support for Microsoft OneDrive (OneDrive) (#9799)
- [Feature] Browse local filesystem in browser
- [Feature] Support ssh-rsa-cert-v01@openssh.com format for private key files (SFTP)
- [Feature] Support ssh-dsa-cert-v01@openssh.com format for private key files (SFTP)
- [Feature] Configure lifecycle options for buckets (Backblaze B2)
- [Feature] Copy pre-authenticated URLs (Backblaze B2)

5.4.4 [https://trac.cyberduck.io/milestone/5.4.4]
- [Bugfix] Multipart uploads do not resume (S3)
- [Bugfix] Field in login prompt disabled to enter authentication code (OAuth 2.0)

5.4.3 [https://trac.cyberduck.io/milestone/5.4.3]
- [Bugfix]  Interoperability with PROPFIND for listing folders (WebDAV)
- [Bugfix] Failed to generate HMAC (Spectra S3)
- [Bugfix] Quick Look only works one time (#9889)
- [Bugfix] Set MD5 checksum in ETag request header (OpenStack Swift)

5.4.2 [https://trac.cyberduck.io/milestone/5.4.2]
- [Bugfix] Updated localizations

5.4.1 [https://trac.cyberduck.io/milestone/5.4.1]
- [Feature] Faster recursive delete with single operation for directories (WebDAV)
- [Bugfix] Reload OpenSSH configuration (SFTP)
- [Bugfix] Revert lenient server reply parsing (FTP)

5.4 [https://trac.cyberduck.io/milestone/5.4]
- [Feature] Add "Open single connection" option for file transfers
- [Bugfix] Failure enabling download distribution (CloudFront) (#9870)