@@ -29,6 +29,7 @@
 
 
 
+
     </style>
 </head>
 
@@ -63,6 +64,10 @@
     </li>
     <li>[Bugfix] Failure uploading files with temporary filename option enabled (Backblaze B2)</li>
     <li>[Bugfix] Failure connecting to local disk (Windows)</li>
+    <li>[Bugfix] Multipart uploads fail if the user lacks permission to list multipart uploads (S3) (<a
+            href="https://trac.cyberduck.io/ticket/9948">#9948</a>)
+    </li>
+    <li>[Bugfix] Synchronize files in vault (Cryptomator)</li>
 </ul>
 
 <p>
