@@ -8,6 +8,8 @@ https://cyberduck.io/
 - [Bugfix] Failure duplicating files (FTP) (#9933)
 - [Bugfix] Failure uploading files with temporary filename option enabled (Backblaze B2)
 - [Bugfix] Failure connecting to local disk (Windows)
+- [Bugfix] Multipart uploads fail if the user lacks permission to list multipart uploads (S3) (#9948)
+- [Bugfix] Synchronize files in vault (Cryptomator)
 
 6.0 [https://trac.cyberduck.io/milestone/6.0]
 - [Feature] Create encrypted vault interopable with Cryptomator (#7937)
